Revert "Prevent popup menu titles from wrapping when too close to the edge of the screen."
This reverts commit a73da69c3cf24db9ab79b3a0c487de4cca4abacc.

--- a/sidebar.css
+++ b/sidebar.css
@@ -113,7 +113,6 @@ div.menu .action {
   width:auto;
   text-align:left;
   cursor:default;
-  white-space: nowrap;
 }
 
 div.menu .action span {
@@ -467,7 +466,6 @@ div.menu.visible {
   width: 100%;
   height: 24px;
   box-sizing: border-box;
-  position: sticky;
   z-index: 1;
   background: var(--surface-color);
   top: calc(50px);
